2007-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Indentation fix.

2007-11-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c, NEWS: Declare the child and pid variable at the
	beginning of a block. This fixes a compilation issue with gcc 2.95.

2007-11-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/Makefile, NEWS: Add a suidperms variable. This should ease
	the change of permission of suid binaries for distributors (not
	recommended).

2007-11-10  Nicolas François  <nicolas.francois@centraliens.net>

	* ./, libmisc/, src/, contrib/, doc/, lib/, man/, man/sv/,
	man/de/, man/ja/, man/fi/, man/pt_BR/, man/fr/, man/pl/, man/hu/,
	man/tr/, man/ru/, man/zh_TW/, man/id/, man/zh_CN/, man/cs/,
	man/es/, man/ko/, man/it/, etc/, etc/pam.d/, po/: Restore the
	ignore patterns from the previous repository.

	* libmisc/*.c, libmisc/*.h, libmisc/getdate.y, shadow.spec.in,
	src/*.c, contrib/groupmems.shar, contrib/pwdauth.c,
	doc/README.platforms, doc/WISHLIST, doc/console.c.spec.txt,
	lib/*.c, lib/*.h, COPYING, man/*.xml, man/sv/*.[1358],
	man/de/*.[1358], man/ja/*.[1358], man/fi/*.[1358],
	man/fr/*.[1358], man/pt_BR/*.[1358], man/pl/*.[1358],
	man/hu/*.[1358], man/tr/*.[1358], man/ru/*.[1358],
	man/zh_TW/*.[1358], man/id/*.[1358], man/zh_CN/*.[1358],
	man/cs/*.[1358], man/es/*.[1358], man/ko/*.[1358],
	man/it/*.[1358], etc/login.access, etc/login.defs, NEWS: Added the
	subversion svn:keywords property (Id) for proper identification.

2007-11-10  Nicolas François  <nicolas.francois@centraliens.net>

	* man/sv/sv.po, man/de/de.po, man/fr/fr.po, man/pl/pl.po,
	man/ru/ru.po, man/it/it.po: Run "make update-po" in the man
	directory.

	* po/ne.po, po/bs.po, po/cs.po, po/pt_BR.po, po/km.po, po/es.po,
	po/eu.po, po/ko.po, po/hu.po, po/sk.po, po/vi.po, po/uk.po,
	po/ro.po, po/sq.po, po/ru.po, po/id.po, po/nb.po, po/el.po,
	po/gl.po, po/fr.po, po/nl.po, po/pl.po, po/nn.po, po/it.po,