@@ -15,6 +15,10 @@ shadow-4.0.18.1 -> shadow-4.0.18.2					UNRELEASED
 - newgrp.c: Declare the child and pid variable at the beginning of a block.
   This fixes a compilation issue with gcc 2.95. The intent is the same as
   Gentoo's patch shadow-4.0.12-gcc2.patch.
+- login_nopam: Add support for systems with no innetgr().  On those
+  systems, username with an @ will be treated like any other username
+  (i.e. lookup in the local database for an user with an @). Thanks to
+  Mike Frysinger for the patch.
 
 shadow-4.0.18.1 -> shadow-4.0.18.2					28-10-2007
 
