@@ -1,5 +1,14 @@
 2007-11-16  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* configure.in: Check if the netdb.h header file and the innetgr
+	function exist.
+	* src/login_nopam.c, NEWS: Add support for systems with no
+	innetgr().  On those systems, username with an @ will be treated
+	like any other username (i.e. lookup in the local database for an
+	user with an @). Thanks to Mike Frysinger for the patch.
+
+2007-11-16  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/useradd.c: Indentation fix.
 
 2007-11-14  Nicolas François  <nicolas.francois@centraliens.net>
